# BlenderUserScripts

./: README.md  pyproject.toml
addons/save-load-shapes/: __init__.py  save_load_shape.py
